# quantum-solar

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-hardware.txt  requirements.txt
.github/workflows/: tests.yml
docs/figures/web/: schedule_real_day.json
docs/plans/: hardware-run.md
docs/results/: hardware_counts.json  hardware_params.json  qaoa_scaling.csv
notebooks/: demo.ipynb  experiment_hardware.ipynb  experiment_qaoa_scaling.ipynb
scripts/: experiment_hardware.py  experiment_scaling.py  make_mass_ratio_figure.py  make_preview.py  make_real_schedule_figure.py
src/quantum_solar/: __init__.py  brute_force.py  dynamic_programming.py  ising.py  plotting.py  problem.py  qaoa.py  qubo.py  solution.py
src/quantum_solar/data/: __init__.py  config.py  load_profile.py  nrel.py
src/quantum_solar/data/profiles/: SOURCE.md  co_residential_summer_weekday.csv
tests/: conftest.py  test_brute_force.py  test_dynamic_programming.py  test_experiment_hardware.py  test_experiment_scaling.py  test_ising.py  test_nrel_loader.py  test_qaoa.py  test_qubo.py
tests/fixtures/: urdb_xcel_co_retou.json
